# 1.24.01 (33383) Jul 16, 2009
7/16/09 Fixed an issue with number format for Arabic (and possibly other languages)
# 1.24.00 (33092) Jul 7, 2009
# 1.22.03 (33022) Jul 3, 2009
> Made it so the Stop buttons associated with each chart continue working after t=20 sec
# 1.22.02 (32916) Jul 1, 2009
# 1.22.01 (32765) Jun 26, 2009
> Fixed a bug that prevented boundaries from working properly, see #1697
# 1.22.00 (30796) Apr 22, 2009
4/22/09 move Arabic (ar) translation to Farsi (fa), #1507
# 1.21.00 (30671) Apr 21, 2009
4/21/09 Batch deploy as part of IOM milestone with revision 30670
10-08-2008: use PhetApplicationConfig.launchSim

1.20.08 (9-29-2008)
Removed speed control slider

8-30-2007: Slider wiggle me is hidden when user enters text in a text box.
7-26-2007: Workaround for font bounds problem in some locales that caused tearing in the time readout

1.16.09 (6-27-2007)
Improved motion subproject for MovingManMotionApplication feasibility test

1.16.08 (6-13-2007)
Testing beanshell evaluator under web start.

1.16.07 (6-11-2007)
Added Play/Pause to Expression evaluator.
Fixed a bug in audio resource loading.

1.16.06 (6-11-2007)
Improved Slovak localization file.